# Machine-Learning

./: .gitignore  LICENSE  README.md  requirements.txt
classification/logistic_regression/: README.md  credit_data.csv  logistic_regression_example.py  logistic_regression_syntax.py
classification/svm/: README.md  market_data.csv  svm_market_prediction.py  svm_syntax.py
clustering/k_means_clustering/: README.md  k_means_clustering_example.py  mall_customers.csv
dimensionality_reduction/pca/: README.md  pca_factor_analysis.py  pca_syntax.py  stock_returns.csv
fundamentals/calculus/: README.md  calculus_basics.py
fundamentals/linear_algebra/: README.md  linear_algebra_basics.py
fundamentals/probability_and_statistics/: README.md  statistics_basics.py
fundamentals/python_for_ml/: README.md  python_basics.py
neural_networks/cnn/: README.md  cnn_stock_prediction.py  cnn_syntax.py  historical_prices.csv
neural_networks/encoder_decoder/: README.md  encoder_decoder_stock_prediction.py  encoder_decoder_syntax.py
neural_networks/lstm/: README.md  lstm_stock_prediction.py  lstm_syntax.py
neural_networks/mlp/: README.md  mlp_stock_prediction.py  mlp_syntax.py  technical_indicators.csv
regression/linear_regression/: README.md  google_stock_price.csv  linear_regression_example.py  linear_regression_syntax.py
regression/linear_regression/cpp/: CMakeLists.txt  README.md  main.cpp
regression/polynomial_regression/: README.md  polynomial_regression_example.py  polynomial_regression_syntax.py  yield_curve_data.csv
trees/decision_tree_classification/: README.md  (+3 more)
(+5 files in other folders)
